<resources>
    <string name="app_name">Муммовское</string>
    <string name="label_welcome">Добро пожаловать в\n<b>%s</b></string>
    <string name="description_welcome">Отслеживайте здоровье своего стада в реальном времени и получайте важные уведомления. Управление коровами стало проще!  </string>

    <string name="reg">Регистрация</string>
    <string name="log">Авторизация</string>

    <string name="help_log">"Вкладка "Главная": здесь вы можете ознакомиться с материалами по лечению и диагностированию состояния коров. Также, в верхнем правом углу вы можете как заполнить, так и отредактировать данные о себе. \n\n" +
                            "Вкладка "Календарь": здесь отображаются запланированные осмотры. \n\n" +
                            "Вкладка "Здоровье": здесь находятся все заполненные истории болезни. \n\n" +
                            "Вкладка "Осмотр": здесь отображаются все запланированные осмотры коров с детализацией лечебных мероприятий. \n\n" +
                            "Вкладка "Животные": здесь отображаются все внесенные вами коровы. Также здесь можно ознакомиться с данными о корове, ее историях болезни и запланированных осмотрах. Найти животное в списке можно вручную, либо отсканировав ее QR-код на бирке при помощи встроенного сканера в верхнем правом углу."</string>

    <string name="reg_label">Регистрация</string>
    <string name="reg_email">Введите адрес эл. почты</string>
    <string name="reg_password">Придумайте пароль</string>
    <string name="reg_accept_password">Повторите пароль</string>
    <string name="reg_email_placeholder">Email</string>
    <string name="reg_password_placeholder">Пароль</string>
    <string name="reg_social">Войти через соц. сети?</string>

    <string name="login_label">Авторизация</string>
    <string name="login">Войти</string>
    <string name="login_password_label">Введите пароль</string>

    <string name="menu_calendar">Календарь</string>
    <string name="menu_health">Здоровье</string>
    <string name="menu_main">Главная</string>
    <string name="menu_inspect">Осмотр</string>
    <string name="menu_animals">Животные</string>

    <string name="search">Поиск...</string>

    <string name="references">Справочники: </string>
    <string name="profile">Личный Кабинет</string>
    <string name="edit_data">Редактировать данные</string>
    <string name="save_edit">Сохранить изменения</string>
    <string name="deauth">Деавторизоваться</string>
    <string name="fio">ФИО</string>
    <string name="birthday">Дата Рождения</string>
    <string name="cource">Курс</string>
    <string name="phone">Телефон</string>
    <string name="email">Почта</string>

    <string name="calendar_inspections">Смотреть список плановых осмотров</string>
    <string name="read">Читать</string>
    <string name="fontSize">Размер шрифта</string>
    <string name="book_name">Название справочника</string>
    <string name="book_author">Автор справочника</string>
    <string name="all_info_animal">Вся информация о животном</string>
    <string name="animal_name">Кличка животного</string>
    <string name="about_animal">О животном</string>
    <string name="watch_all_sicks">Смотреть список всех болезней</string>
    <string name="watch_all_inspects">Смотреть список осмотров</string>
    <string name="recent_events">Последние события</string>
    <string name="add_animal">Добавить животное</string>
    <string name="plan_inspect">Запланировать осмотр</string>
    <string name="add_sick">Добавить болезнь</string>
    <string name="remove">Удалить</string>
    <string name="watch_sick_history">Смотреть историю болезни</string>
    <string name="sick">Болезнь</string>
</resources>